<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gling.bookmeup.MainActivityActivity" >

    <item
        android:id="@+id/business_action_calendar"
        android:title="Calendar"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_my_calendar"/>
    <item
        android:id="@+id/business_action_edit_profile"
        android:title="@string/edit_profile"/>
    <item
        android:id="@+id/business_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/business_action_logout"
        android:orderInCategory="101"
        android:title="@string/logout"/>

</menu>
