<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.gling.bookmeup.main.MainActivity$EMailSignUpFragment" >

        <EditText
            android:id="@+id/email_signup_edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_signup_edtUserNameHint"
            android:imeOptions="actionNext"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/email_signup_edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_signup_edtEmailHint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email_signup_edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_signup_edtPasswordHint"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email_signup_edtPasswordVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:hint="@string/email_signup_edtPasswordVerificationHint"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:text="You will receive an e-mail message for verification" />

        <Button
            android:id="@+id/email_signup_btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip"
            android:text="@string/email_signup_btnSignUp" />
    </LinearLayout>

</ScrollView>