<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bookmeup="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/business_customer_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="Search"
            android:src="@drawable/ic_action_search" />

        <EditText
            android:id="@+id/business_customer_list_edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:hint="@string/business_customer_list_edtSearchHint"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/business_customer_list_filtersBar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/business_customer_list_header"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/business_customer_list_btnFilterBySpendings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business_customer_list_btnFilterBySpendings" />

        <Button
            android:id="@+id/business_customer_list_btnFilterByLastVisit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/business_customer_list_btnFilterByLastVisit" />
    </LinearLayout>

    <com.gling.bookmeup.main.views.CardListViewWrapperView
        android:id="@+id/business_customer_list_listViewCustomers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/business_customer_list_filtersBar"
        bookmeup:emptyListText="@string/business_customer_list_no_customers" />

</RelativeLayout>